<?xml version="1.0" encoding="utf-8"?>

<!--
   * Copyright (C) 2024 murangogo
   *
   * This library is free software; you can redistribute it and/or modify it under
   * the terms of the GNU Lesser General Public License as published by the Free
   * Software Foundation; either version 3 of the License, or (at your option)
   * any later version.
   *
   * This library is distributed in the hope that it will be useful, but WITHOUT
   * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
   * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.
   *
   * You should have received a copy of the GNU Lesser General Public License along
   * with this library; if not, write to the Free Software Foundation, Inc.,
   * 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
   *-->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/floating_ball"
        app:iconSpaceReserved="false">

        <com.moe.moetranslator.me.PreferenceWithPreview
            android:key="floating_ball_pic"
            app:iconSpaceReserved="false"
            android:title="@string/floating_ball_pic_title" />

        <Preference
            android:key="floating_ball_press"
            app:iconSpaceReserved="false"
            android:title="@string/floating_ball_press_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/translate_result_box_with_hint"
        app:iconSpaceReserved="false">

        <Preference
            android:key="result_font"
            android:title="@string/font_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="result_font_size"
            android:title="@string/font_size_title"
            app:iconSpaceReserved="false"/>

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:key="result_view_font_color"
            app:iconSpaceReserved="false"
            android:defaultValue="@color/result_view_font_color_default"
            app:cpv_dialogTitle="@string/font_color"
            android:title="@string/font_color"
            android:summary="@string/font_color_summary"
            app:cpv_showAlphaSlider="true" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:key="result_view_background_color"
            app:iconSpaceReserved="false"
            android:defaultValue="@color/result_view_background_color_default"
            app:cpv_dialogTitle="@string/result_background_color"
            android:title="@string/result_background_color"
            android:summary="@string/result_background_color_summary"
            app:cpv_showAlphaSlider="true" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:key="result_penetrability"
            android:title="@string/penetrability"
            android:summary="@string/penetrability_summary"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/manga_result_setting_title"
        app:iconSpaceReserved="false">

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:key="manga_text_color"
            app:iconSpaceReserved="false"
            android:defaultValue="-16777216"
            app:cpv_dialogTitle="@string/manga_text_color"
            android:title="@string/manga_text_color"
            android:summary="@string/manga_text_color_summary"
            app:cpv_showAlphaSlider="false" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:key="manga_bg_color"
            app:iconSpaceReserved="false"
            android:defaultValue="-1"
            app:cpv_dialogTitle="@string/manga_bg_color"
            android:title="@string/manga_bg_color"
            android:summary="@string/manga_bg_color_summary"
            app:cpv_showAlphaSlider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/ocr_category_with_hint"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="show_source_text"
            app:iconSpaceReserved="false"
            android:defaultValue="0"
            android:title="@string/show_source_text_title"
            android:entries="@array/show_source_text_entries"
            android:entryValues="@array/show_source_text_values"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/auto_translate"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:key="pixel_stability_check"
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:title="@string/pixel_stability_title"
            android:summary="@string/pixel_stability_summary"/>

        <ListPreference
            android:key="pixel_check_interval"
            app:iconSpaceReserved="false"
            android:defaultValue="300"
            android:title="@string/pixel_check_interval_title"
            android:entries="@array/pixel_check_interval_entries"
            android:entryValues="@array/pixel_check_interval_values"/>

        <ListPreference
            android:key="pixel_threshold"
            app:iconSpaceReserved="false"
            android:defaultValue="1"
            android:title="@string/pixel_threshold_title"
            android:entries="@array/pixel_threshold_entries"
            android:entryValues="@array/pixel_threshold_values"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/game_context_title"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:key="game_context_enabled"
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:title="@string/game_context_title"
            android:summary="@string/game_context_summary"/>

        <ListPreference
            android:key="game_context_count"
            app:iconSpaceReserved="false"
            android:defaultValue="5"
            android:title="@string/game_context_count_title"
            android:entries="@array/context_count_entries"
            android:entryValues="@array/context_count_values"
            android:dependency="game_context_enabled"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_overlay_category"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:key="status_overlay_enabled"
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:title="@string/status_overlay_enabled_title"
            android:summary="@string/status_overlay_enabled_summary"/>

        <ListPreference
            android:key="Status_Position"
            app:iconSpaceReserved="false"
            android:defaultValue="top"
            android:title="@string/status_overlay_position_title"
            android:entries="@array/status_overlay_position_entries"
            android:entryValues="@array/status_overlay_position_values"
            android:dependency="status_overlay_enabled"/>

        <ListPreference
            android:key="Status_Duration"
            app:iconSpaceReserved="false"
            android:defaultValue="2000"
            android:title="@string/status_overlay_duration_title"
            android:entries="@array/status_overlay_duration_entries"
            android:entryValues="@array/status_overlay_duration_values"
            android:dependency="status_overlay_enabled"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other_setting"
        app:iconSpaceReserved="false">

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:key="adjust_tip"
            android:title="@string/adjust_not_tip"
            android:summary="@string/adjust_not_tip_summary"
            android:defaultValue="false"/>

        <ListPreference
            android:key="app_language"
            app:iconSpaceReserved="false"
            android:defaultValue="system"
            android:title="@string/language_setting_title"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>